product details and cart component improvements

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -18,13 +18,14 @@ h2, h3, h4 {
   
 }
 
-
-
 span {
   padding-left: 5px;
   padding-right: 5px;
 }
 
+.number-styling {
+  font-family: "Times New Roman", Times, serif;
+}
 
 main {
     max-width: 80%;
